--- a/README
+++ b/README
@@ -61,7 +61,7 @@ libraries, so any updates will automatically be available.
 
 2. If you would like the Python module available in any directory without installing for
 other users, you can simply modify your PYTHONPATH environment variable to include the
-full path to fdfault/python/fdfault. This will only effect the current user.
+full path to fdfault/python. This will only effect the current user.
 
 3. Some users prefer to only have the Python tools available in certain directories.
 The tools for setting up problems are most often used in the problems directory, and the
@@ -82,18 +82,11 @@ directory. Similarly, to make the analysis features available in the data direct
 This allows you to type "import fdfault" from within the data directory and have the 
 analysis tools at your disposal.
 
-If you downloaded the code via a gzipped tarball, the User's Guide should already be available in PDF form in the docs/_build/ directory in both html and pdf formats.
-If you downloaded the code from the git repository, you will need to build the User's 
-Guide yourself (requires Sphinx, and a LaTeX distribution if you want to make a PDF 
-version).
+If you downloaded the code via a gzipped tarball, the User's Guide should already be available in the docs directory. If you downloaded the code from the git repository, 
+you will need to build the User's Guide yourself (requires a LaTeX distribution).
 
 > cd fdfault/docs/
-> make html && make latexpdf
-
-If you only want the html or pdf version, you only need to issue the corresponding 
-make command.
-
-The User's Guide includes detailed instructions on setting up problems and running the code.
+> make
 
 #########################################################################################
 
