added depth indicator on hypocenter in diagram for TPV4

--- a/docs/examples/tpv4.tex
+++ b/docs/examples/tpv4.tex
@@ -17,6 +17,7 @@
 \draw[line width=1pt,<->] (6.625,4.5) -- (7,4.5) node[anchor=north]{3 km} -- (7.375, 4.5);
 \draw[line width=1pt,<->] (6.4375,4.6875) -- (6.4375,5.2) node[anchor=east]{3 km} -- (6.4375, 5.4375);
 \draw[line width=1pt,<->] (2,6.25) -- (5,6.25) node[anchor=south]{20 km} -- (7, 6.25);
+\draw[line width=1pt,<->] (9,5.125) -- (9,6) node[anchor=west]{7.5 km} -- (9, 7);
 \draw[line width=1pt,->] (0.5,7) -- (1.5,7) node[anchor=west]{$x$};
 \draw[line width=1pt,->] (0.5,7) -- (1.207,7.707) node[anchor=south west]{$y$};
 \draw[line width=1pt,->] (0.5,7) -- (0.5,8) node[anchor=south]{$z$};
